fixed nav on small screen being inaccessible
moved company logo (top-right corner) to the left for small screens

--- a/templates/default/styles/docfx.css
+++ b/templates/default/styles/docfx.css
@@ -286,6 +286,13 @@ header .link-to-homepage {
   top: 8px;
   right: 8px;
 }
+@media (max-width: 768px) {
+  header .link-to-homepage {
+    position: absolute;
+    top: 8px;
+    right: 100px;
+  }
+}
 
 .collapse.in,
 .collapsing {
